# nes-emulator

./: .gitignore  Cargo.toml  README.md  flake.nix
examples/: nestest.rs  snake.rs
nes-emulator-macros/: Cargo.toml
nes-emulator-macros/src/: lib.rs
src/: bus.rs  cpu.rs  interrupt.rs  lib.rs  main.rs  mem.rs  opcode.rs  opcodes.rs  rom.rs  trace.rs
src/cpu/: mod.rs
src/cpu/instructions/: aac.rs  aax.rs  adc.rs  and.rs  arr.rs  asl.rs  asr.rs  atx.rs  axa.rs  axs.rs  bcc.rs  bcs.rs  beq.rs  bit.rs  bmi.rs  bne.rs  bpl.rs  brk.rs  bvc.rs  bvs.rs  clc.rs  cld.rs  cli.rs  clv.rs  cmp.rs  cpx.rs  cpy.rs  dcp.rs  dec.rs  dex.rs  dey.rs  eor.rs  inc.rs  inx.rs  iny.rs  isc.rs  jmp.rs  jsr.rs  kil.rs  lar.rs  (+37 more)
src/ppu/: mod.rs
src/ppu/registers/: address.rs  control.rs  data.rs  mask.rs  mod.rs  oam_address.rs  oam_data.rs  oam_dma.rs  scroll.rs  status.rs
