[package]
name = "nes-emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.8.0"
thiserror = "2.0.11"
nes-emulator-macros = { path = "./nes-emulator-macros" }

[dev-dependencies]
rand = "0.9.0"
sdl2 = "0.37.0"
test-case = "3.3.1"
